ui: A collection of fixes for the network debugging page
- Fix the case in which longs had no value during calculation causing the page
to not load.
- Fix latency page to only display when there is at least 2 nodes worth of
latencies to display.
- Add a loading spinner to the network diagnostics page.
- Fix the loading spinner to accept an array of children instead of just a
single child element.
- Add a new top padded style so the loading spinner is not so cramped on the
page.
- Fix a crash when a new node doesn't yet have any activity.
- Replace all not yet calculated latencies with a `?`.
- Don't display a legend if there is only one value (and hence no stddev).

Fixes #23552.

Release note (admin ui change): The network diagnositcs report will no longer
crash when the latencies are very small or on a single node cluster.

--- a/pkg/ui/styl/layout/layout.styl
+++ b/pkg/ui/styl/layout/layout.styl
@@ -179,3 +179,6 @@ div.raft-filters
     background-size 40px 40px
     min-height 40px
     width 400px
+
+    &__padded
+      padding-top 100px
